--- a/style.css
+++ b/style.css
@@ -1,313 +1,23 @@
-@import url("https://fonts.googleapis.com/css?family=Open+Sans:300i,400,600|Pacifico");
-@-moz-keyframes spin {
-  100% {
-    -moz-transform: rotate(360deg); } }
+/*
+Errno::ENOENT: No such file or directory @ rb_sysopen - style.scss
 
-@-webkit-keyframes spin {
-  100% {
-    -webkit-transform: rotate(360deg); } }
-
-@keyframes spin {
-  100% {
-    -webkit-transform: rotate(360deg);
-    transform: rotate(360deg); } }
-<<<<<<< HEAD
-@keyframes slide-in-right {
-  0% {
-    left: -10000px; }
-  100% {
-    left: -500px; } }
-@keyframes slide-in-left {
-  0% {
-    right: -10000px; }
-  100% {
-    right: -500px; } }
-=======
-
-/* line 42, /Users/a_veites/Desktop/2018/fall-2018/advanced_css/zen-garden/ZenGarden-Project/style.scss */
->>>>>>> 7d24e9e7d0ea877c066737fcf4127f1e97c483e7
-body {
-  margin: 0 auto;
-  padding: 20px;
-  background-image: linear-gradient(to bottom, #16395C, #071827, #05111C);
-  font-family: "Open Sans", sans-serif;
-  color: #f0f0df;
-  overflow-x: hidden; }
-  @media (min-width: 50em) {
-    /* line 42, /Users/a_veites/Desktop/2018/fall-2018/advanced_css/zen-garden/ZenGarden-Project/style.scss */
-    body {
-      font-size: 1rem; } }
-
-/* line 52, /Users/a_veites/Desktop/2018/fall-2018/advanced_css/zen-garden/ZenGarden-Project/style.scss */
-abbr {
-  border-bottom: none; }
-
-/* line 56, /Users/a_veites/Desktop/2018/fall-2018/advanced_css/zen-garden/ZenGarden-Project/style.scss */
-h1,
-h2,
-h3 {
-  font-family: "Pacifico", cursive;
-  font-weight: 300; }
-
-/* line 63, /Users/a_veites/Desktop/2018/fall-2018/advanced_css/zen-garden/ZenGarden-Project/style.scss */
-header {
-  text-align: center;
-  color: #f0f0df;
-  font-weight: bold; }
-  @media (min-width: 50em) {
-    /* line 63, /Users/a_veites/Desktop/2018/fall-2018/advanced_css/zen-garden/ZenGarden-Project/style.scss */
-    header {
-      grid-column: 1/4;
-      grid-row: 1/4;
-      text-align: left;
-      font-size: 1.6rem;
-      line-height: 1.2rem; } }
-
-a {
-  color: #ffb021;
-  text-decoration: none; }
-  a:hover {
-    font-size: 1.5em;
-    font-weight: bolder;
-    transition: 1s; }
-
-@media (min-width: 50em) {
-  /* line 76, /Users/a_veites/Desktop/2018/fall-2018/advanced_css/zen-garden/ZenGarden-Project/style.scss */
-  .intro {
-    display: grid;
-    grid-template-rows: repeat(7, auto);
-<<<<<<< HEAD
-    grid-template-columns: repeat(7, auto);
-    animation: slide-in-right 1s;
-    transition: all 1s;
-    transition-timing-function: ease-out; }
-=======
-    grid-template-columns: repeat(7, auto); }
-    /* line 81, /Users/a_veites/Desktop/2018/fall-2018/advanced_css/zen-garden/ZenGarden-Project/style.scss */
->>>>>>> 7d24e9e7d0ea877c066737fcf4127f1e97c483e7
-    .intro::after {
-      display: inline-block;
-      border: 1px solid;
-      border-radius: 40%;
-      width: 250px;
-      height: 250px;
-      content: '';
-      background-repeat: no-repeat;
-      background-attachment: fixed;
-      background-size: 100px 100px;
-      grid-column: 6/7;
-      grid-row: 3/5;
-      -webkit-animation: spin 4s linear infinite;
-      -moz-animation: spin 4s linear infinite;
-      animation: spin 4s linear infinite;
-      transform-origin: center; } }
-
-/* line 101, /Users/a_veites/Desktop/2018/fall-2018/advanced_css/zen-garden/ZenGarden-Project/style.scss */
-.summary {
-  font-style: italic; }
-  @media (min-width: 50em) {
-    /* line 101, /Users/a_veites/Desktop/2018/fall-2018/advanced_css/zen-garden/ZenGarden-Project/style.scss */
-    .summary {
-      grid-column: 1/8;
-      grid-row: 4/6; } }
-
-/* line 109, /Users/a_veites/Desktop/2018/fall-2018/advanced_css/zen-garden/ZenGarden-Project/style.scss */
-.summary > p {
-  text-align: center; }
-  @media (min-width: 50em) {
-    /* line 109, /Users/a_veites/Desktop/2018/fall-2018/advanced_css/zen-garden/ZenGarden-Project/style.scss */
-    .summary > p {
-      width: 50%;
-      font-weight: light;
-      text-align: left; } }
-
-/* line 118, /Users/a_veites/Desktop/2018/fall-2018/advanced_css/zen-garden/ZenGarden-Project/style.scss */
-.preamble {
-  line-height: 1.8rem; }
-  @media (min-width: 50em) {
-    /* line 118, /Users/a_veites/Desktop/2018/fall-2018/advanced_css/zen-garden/ZenGarden-Project/style.scss */
-    .preamble {
-      grid-column: 1/8;
-      grid-row: 6/8;
-      position: relative; } }
-  /* line 125, /Users/a_veites/Desktop/2018/fall-2018/advanced_css/zen-garden/ZenGarden-Project/style.scss */
-  .preamble h3 {
-    text-align: center; }
-
-/* line 130, /Users/a_veites/Desktop/2018/fall-2018/advanced_css/zen-garden/ZenGarden-Project/style.scss */
-.preamble,
-.participation,
-.requirements {
-  text-align: center;
-  color: #f0f0df; }
-
-.preamble, .requirements {
-  margin-bottom: 2em; }
-
-/* line 143, /Users/a_veites/Desktop/2018/fall-2018/advanced_css/zen-garden/ZenGarden-Project/style.scss */
-.main {
-  line-height: 1.8rem; }
-  @media (min-width: 50em) {
-    /* line 143, /Users/a_veites/Desktop/2018/fall-2018/advanced_css/zen-garden/ZenGarden-Project/style.scss */
-    .main {
-      display: grid;
-      grid-template-rows: repeat(5, auto);
-      grid-template-columns: repeat(2, auto); } }
-
-<<<<<<< HEAD
-.explanation {
-  display: grid; }
-  @media (min-width: 50em) {
-    .explanation {
-      position: relative;
-      grid-row: 1/2;
-      grid-column: 2/3; } }
-
-.participation {
-  display: grid; }
-  @media (min-width: 50em) {
-    .participation {
-      position: relative;
-      grid-row: 2/3;
-      grid-column: 1/2; }
-      .participation::before {
-        content: url("");
-        background-repeat: no-repeat;
-        background-attachment: fixed;
-        display: inline-block;
-        position: absolute;
-        top: 50px;
-        right: -500px;
-        height: 75%;
-        width: 45%;
-        border: 1px solid;
-        animation: slide-in-left 3s;
-        transition: all 3s;
-        transition-timing-function: ease-out; } }
-
-.benefits {
-  display: grid; }
-  @media (min-width: 50em) {
-    .benefits {
-      position: relative;
-      grid-row: 3/4;
-      grid-column: 2/3; } }
-
-@media (min-width: 50em) {
-  .explanation::before, .benefits::before {
-    content: url("");
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    display: inline-block;
-    position: absolute;
-    top: 30px;
-    left: -500px;
-    height: 75%;
-    width: 45%;
-    border: 1px solid;
-    animation: slide-in-right 3s;
-    transition: all 3s;
-    transition-timing-function: ease-out; } }
-=======
-@keyframes shrink-1 {
-  0% {
-    grid-column: 1/3; }
-  100% {
-    grid-column: 2/3; } }
-
-@keyframes shrink-2 {
-  0% {
-    grid-column: 1/3; }
-  100% {
-    grid-column: 1/2; } }
-
-@media (min-width: 50em) {
-  /* line 170, /Users/a_veites/Desktop/2018/fall-2018/advanced_css/zen-garden/ZenGarden-Project/style.scss */
-  .explanation {
-    grid-row: 1/2;
-    grid-column: 2/3;
-    animation: shrink-1 2s ease-out; }
-    /* line 175, /Users/a_veites/Desktop/2018/fall-2018/advanced_css/zen-garden/ZenGarden-Project/style.scss */
-    .explanation::after {
-      content: '';
-      width: 250px;
-      height: 250px;
-      grid-column: 1/2;
-      border: 1px solid white; } }
-
-@media (min-width: 50em) {
-  /* line 185, /Users/a_veites/Desktop/2018/fall-2018/advanced_css/zen-garden/ZenGarden-Project/style.scss */
-  .participation {
-    grid-row: 2/3;
-    grid-column: 1/2;
-    animation: shrink-2 2s ease-out; } }
-
-@media (min-width: 50em) {
-  /* line 193, /Users/a_veites/Desktop/2018/fall-2018/advanced_css/zen-garden/ZenGarden-Project/style.scss */
-  .benefits {
-    grid-row: 3/4;
-    grid-column: 2/3;
-    animation: shrink-1 2s ease-out; } }
->>>>>>> 7d24e9e7d0ea877c066737fcf4127f1e97c483e7
-
-/* line 201, /Users/a_veites/Desktop/2018/fall-2018/advanced_css/zen-garden/ZenGarden-Project/style.scss */
-.requirements {
-  line-height: 1.8rem;
-  margin-top: 2em; }
-  @media (min-width: 50em) {
-    /* line 201, /Users/a_veites/Desktop/2018/fall-2018/advanced_css/zen-garden/ZenGarden-Project/style.scss */
-    .requirements {
-      grid-row: 4/5;
-      grid-column: 1/3; } }
-
-@media (min-width: 50em) {
-  /* line 209, /Users/a_veites/Desktop/2018/fall-2018/advanced_css/zen-garden/ZenGarden-Project/style.scss */
-  footer {
-    grid-column: 1/3;
-    grid-row: 5/6;
-    text-align: center; }
-    /* line 214, /Users/a_veites/Desktop/2018/fall-2018/advanced_css/zen-garden/ZenGarden-Project/style.scss */
-    footer::before {
-      content: '\A';
-      white-space: pre; } }
-
-/* line 221, /Users/a_veites/Desktop/2018/fall-2018/advanced_css/zen-garden/ZenGarden-Project/style.scss */
-.wrapper {
-  display: grid;
-  grid-template-columns: 50% 50%;
-  grid-template-rows: auto auto; }
-  @media (min-width: 50em) {
-    /* line 221, /Users/a_veites/Desktop/2018/fall-2018/advanced_css/zen-garden/ZenGarden-Project/style.scss */
-    .wrapper {
-      grid-template-columns: 25% 25% 25% 25%;
-      position: relative; }
-      /* line 228, /Users/a_veites/Desktop/2018/fall-2018/advanced_css/zen-garden/ZenGarden-Project/style.scss */
-      .wrapper::after {
-        content: url("");
-        background-repeat: no-repeat;
-        background-attachment: fixed;
-        display: inline-block;
-        position: absolute;
-        top: 100px;
-        right: 0;
-        height: 75%;
-        width: 45%;
-        border: 1px solid; } }
-
-/* line 243, /Users/a_veites/Desktop/2018/fall-2018/advanced_css/zen-garden/ZenGarden-Project/style.scss */
-.design-selection {
-  grid-row: 1/2;
-  grid-column: 1/3;
-  width: 100%; }
-  @media (min-width: 50em) {
-    /* line 243, /Users/a_veites/Desktop/2018/fall-2018/advanced_css/zen-garden/ZenGarden-Project/style.scss */
-    .design-selection {
-      grid-column: 1/3;
-      grid-row: 1/2; } }
-
-/* line 254, /Users/a_veites/Desktop/2018/fall-2018/advanced_css/zen-garden/ZenGarden-Project/style.scss */
-.design-archives,
-.zen-resources {
-  grid-row: 2/3; }
-
-/*# sourceMappingURL=style.css.map */
+Backtrace:
+C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.5.7/lib/sass/plugin/compiler.rb:454:in `read'
+C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.5.7/lib/sass/plugin/compiler.rb:454:in `update_stylesheet'
+C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.5.7/lib/sass/plugin/compiler.rb:215:in `block in update_stylesheets'
+C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.5.7/lib/sass/plugin/compiler.rb:209:in `each'
+C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.5.7/lib/sass/plugin/compiler.rb:209:in `update_stylesheets'
+C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.5.7/lib/sass/plugin/compiler.rb:294:in `watch'
+C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.5.7/lib/sass/plugin.rb:109:in `method_missing'
+C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.5.7/lib/sass/exec/sass_scss.rb:358:in `watch_or_update'
+C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.5.7/lib/sass/exec/sass_scss.rb:51:in `process_result'
+C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.5.7/lib/sass/exec/base.rb:50:in `parse'
+C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.5.7/lib/sass/exec/base.rb:18:in `parse!'
+C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.5.7/bin/sass:13:in `<top (required)>'
+C:/Ruby24-x64/bin/sass:23:in `load'
+C:/Ruby24-x64/bin/sass:23:in `<main>'
+*/
+body:before {
+  white-space: pre;
+  font-family: monospace;
+  content: "Errno::ENOENT: No such file or directory @ rb_sysopen - style.scss"; }
