--- a/style.css
+++ b/style.css
@@ -1,23 +1,233 @@
-/*
-Errno::ENOENT: No such file or directory @ rb_sysopen - style.scss
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:300i,400,600|Pacifico");
+@-moz-keyframes spin {
+  100% {
+    -moz-transform: rotate(360deg); } }
+@-webkit-keyframes spin {
+  100% {
+    -webkit-transform: rotate(360deg); } }
+@keyframes spin {
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg); } }
+@keyframes slide-in-right {
+  0% {
+    left: -10000px; }
+  100% {
+    left: -500px; } }
+@keyframes slide-in-left {
+  0% {
+    right: -10000px; }
+  100% {
+    right: -500px; } }
+body {
+  margin: 0 auto;
+  padding: 20px;
+  background-image: linear-gradient(to bottom, #16395C, #071827, #05111C);
+  font-family: "Open Sans", sans-serif;
+  color: #f0f0df;
+  overflow-x: hidden; }
+  @media (min-width: 50em) {
+    body {
+      font-size: 1rem; } }
 
-Backtrace:
-C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.5.7/lib/sass/plugin/compiler.rb:454:in `read'
-C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.5.7/lib/sass/plugin/compiler.rb:454:in `update_stylesheet'
-C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.5.7/lib/sass/plugin/compiler.rb:215:in `block in update_stylesheets'
-C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.5.7/lib/sass/plugin/compiler.rb:209:in `each'
-C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.5.7/lib/sass/plugin/compiler.rb:209:in `update_stylesheets'
-C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.5.7/lib/sass/plugin/compiler.rb:294:in `watch'
-C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.5.7/lib/sass/plugin.rb:109:in `method_missing'
-C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.5.7/lib/sass/exec/sass_scss.rb:358:in `watch_or_update'
-C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.5.7/lib/sass/exec/sass_scss.rb:51:in `process_result'
-C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.5.7/lib/sass/exec/base.rb:50:in `parse'
-C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.5.7/lib/sass/exec/base.rb:18:in `parse!'
-C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.5.7/bin/sass:13:in `<top (required)>'
-C:/Ruby24-x64/bin/sass:23:in `load'
-C:/Ruby24-x64/bin/sass:23:in `<main>'
-*/
-body:before {
-  white-space: pre;
-  font-family: monospace;
-  content: "Errno::ENOENT: No such file or directory @ rb_sysopen - style.scss"; }
+abbr {
+  border-bottom: none; }
+
+h1,
+h2,
+h3 {
+  font-family: "Pacifico", cursive;
+  font-weight: 300; }
+
+header {
+  text-align: center;
+  color: #f0f0df;
+  font-weight: bold; }
+  @media (min-width: 50em) {
+    header {
+      grid-column: 1/4;
+      grid-row: 1/4;
+      text-align: left;
+      font-size: 1.6rem;
+      line-height: 1.2rem; } }
+
+a {
+  color: #ffb021;
+  text-decoration: none; }
+  a:hover {
+    font-size: 1.5em;
+    font-weight: bolder;
+    transition: 1s; }
+
+@media (min-width: 50em) {
+  .intro {
+    display: grid;
+    grid-template-rows: repeat(7, auto);
+    grid-template-columns: repeat(7, auto);
+    animation: slide-in-right 1s;
+    transition: all 1s;
+    transition-timing-function: ease-out; }
+    .intro::after {
+      display: inline-block;
+      border: 1px solid;
+      border-radius: 40%;
+      width: 250px;
+      height: 250px;
+      content: '';
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+      background-size: 100px 100px;
+      grid-column: 6/7;
+      grid-row: 3/5;
+      -webkit-animation: spin 4s linear infinite;
+      -moz-animation: spin 4s linear infinite;
+      animation: spin 4s linear infinite;
+      transform-origin: center; } }
+
+.summary {
+  font-style: italic; }
+  @media (min-width: 50em) {
+    .summary {
+      grid-column: 1/8;
+      grid-row: 4/6; } }
+
+.summary > p {
+  text-align: center; }
+  @media (min-width: 50em) {
+    .summary > p {
+      width: 50%;
+      font-weight: light;
+      text-align: left; } }
+
+.preamble {
+  line-height: 1.8rem; }
+  @media (min-width: 50em) {
+    .preamble {
+      grid-column: 1/8;
+      grid-row: 6/8;
+      position: relative; } }
+  .preamble h3 {
+    text-align: center; }
+
+.preamble,
+.participation,
+.requirements {
+  text-align: center;
+  color: #f0f0df; }
+
+.preamble, .requirements {
+  margin-bottom: 2em; }
+
+.main {
+  line-height: 1.8rem; }
+  @media (min-width: 50em) {
+    .main {
+      display: grid;
+      grid-template-rows: repeat(5, auto);
+      grid-template-columns: repeat(2, auto); } }
+
+.explanation {
+  display: grid; }
+  @media (min-width: 50em) {
+    .explanation {
+      position: relative;
+      grid-row: 1/2;
+      grid-column: 2/3; } }
+
+.participation {
+  display: grid; }
+  @media (min-width: 50em) {
+    .participation {
+      position: relative;
+      grid-row: 2/3;
+      grid-column: 1/2; }
+      .participation::before {
+        content: url("");
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        display: inline-block;
+        position: absolute;
+        top: 50px;
+        right: -500px;
+        height: 75%;
+        width: 45%;
+        border: 1px solid;
+        animation: slide-in-left 3s;
+        transition: all 3s;
+        transition-timing-function: ease-out; } }
+
+.benefits {
+  display: grid; }
+  @media (min-width: 50em) {
+    .benefits {
+      position: relative;
+      grid-row: 3/4;
+      grid-column: 2/3; } }
+
+@media (min-width: 50em) {
+  .explanation::before, .benefits::before {
+    content: url("");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    display: inline-block;
+    position: absolute;
+    top: 30px;
+    left: -500px;
+    height: 75%;
+    width: 45%;
+    border: 1px solid;
+    animation: slide-in-right 3s;
+    transition: all 3s;
+    transition-timing-function: ease-out; } }
+
+.requirements {
+  line-height: 1.8rem;
+  margin-top: 2em; }
+  @media (min-width: 50em) {
+    .requirements {
+      grid-row: 4/5;
+      grid-column: 1/3; } }
+
+@media (min-width: 50em) {
+  footer {
+    grid-column: 1/3;
+    grid-row: 5/6;
+    text-align: center; }
+    footer::before {
+      content: '\A';
+      white-space: pre; } }
+
+.wrapper {
+  display: grid;
+  grid-template-columns: 50% 50%;
+  grid-template-rows: auto auto; }
+  @media (min-width: 50em) {
+    .wrapper {
+      grid-template-columns: 25% 25% 25% 25%;
+      position: relative; }
+      .wrapper::after {
+        content: url("");
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        display: inline-block;
+        position: absolute;
+        top: 100px;
+        right: 0;
+        height: 75%;
+        width: 45%;
+        border: 1px solid; } }
+
+.design-selection {
+  grid-row: 1/2;
+  grid-column: 1/3;
+  width: 100%; }
+  @media (min-width: 50em) {
+    .design-selection {
+      grid-column: 1/3;
+      grid-row: 1/2; } }
+
+.design-archives,
+.zen-resources {
+  grid-row: 2/3; }
+
+/*# sourceMappingURL=style.css.map */
