--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ a {
       border-radius: 40%;
       width: 250px;
       height: 250px;
-      content: '';
+      content: url("assets/sun-planets72-01.png");
       background-repeat: no-repeat;
       background-attachment: fixed;
       background-size: 100px 100px;
