--- a/style.css
+++ b/style.css
@@ -2,23 +2,29 @@
 @-moz-keyframes spin {
   100% {
     -moz-transform: rotate(360deg); } }
+
 @-webkit-keyframes spin {
   100% {
     -webkit-transform: rotate(360deg); } }
+
 @keyframes spin {
   100% {
     -webkit-transform: rotate(360deg);
     transform: rotate(360deg); } }
+
 @keyframes slide-in-right {
   0% {
     left: -2000px; }
   100% {
     left: -500px; } }
+
 @keyframes slide-in-left {
   0% {
     right: -2000px; }
   100% {
     right: -500px; } }
+
+/* line 9, /Users/a_veites/Desktop/2018/fall-2018/advanced_css/final/FinalProject/style.scss */
 body {
   margin: 0 auto;
   padding: 20px;
@@ -27,23 +33,28 @@ body {
   color: #f0f0df;
   overflow-x: hidden; }
   @media (min-width: 50em) {
+    /* line 9, /Users/a_veites/Desktop/2018/fall-2018/advanced_css/final/FinalProject/style.scss */
     body {
       font-size: 1rem; } }
 
+/* line 21, /Users/a_veites/Desktop/2018/fall-2018/advanced_css/final/FinalProject/style.scss */
 abbr {
   border-bottom: none; }
 
+/* line 25, /Users/a_veites/Desktop/2018/fall-2018/advanced_css/final/FinalProject/style.scss */
 h1,
 h2,
 h3 {
   font-family: "Pacifico", cursive;
   font-weight: 300; }
 
+/* line 32, /Users/a_veites/Desktop/2018/fall-2018/advanced_css/final/FinalProject/style.scss */
 header {
   text-align: center;
   color: #f0f0df;
   font-weight: bold; }
   @media (min-width: 50em) {
+    /* line 32, /Users/a_veites/Desktop/2018/fall-2018/advanced_css/final/FinalProject/style.scss */
     header {
       grid-column: 1/4;
       grid-row: 1/4;
@@ -51,15 +62,18 @@ header {
       font-size: 1.6rem;
       line-height: 1.2rem; } }
 
+/* line 45, /Users/a_veites/Desktop/2018/fall-2018/advanced_css/final/FinalProject/style.scss */
 a {
   color: #ffb021;
   text-decoration: none; }
+  /* line 48, /Users/a_veites/Desktop/2018/fall-2018/advanced_css/final/FinalProject/style.scss */
   a:hover {
     font-size: 1.5em;
     font-weight: bolder;
     transition: 1s; }
 
 @media (min-width: 50em) {
+  /* line 55, /Users/a_veites/Desktop/2018/fall-2018/advanced_css/final/FinalProject/style.scss */
   .intro {
     display: grid;
     grid-template-rows: repeat(7, auto);
@@ -67,6 +81,7 @@ a {
     animation: slide-in-right 1s;
     transition: all 1s;
     transition-timing-function: ease-out; }
+    /* line 63, /Users/a_veites/Desktop/2018/fall-2018/advanced_css/final/FinalProject/style.scss */
     .intro::after {
       display: inline-block;
       border: 1px solid;
@@ -84,63 +99,79 @@ a {
       animation: spin 4s linear infinite;
       transform-origin: center; } }
 
+/* line 84, /Users/a_veites/Desktop/2018/fall-2018/advanced_css/final/FinalProject/style.scss */
 .summary {
   font-style: italic; }
   @media (min-width: 50em) {
+    /* line 84, /Users/a_veites/Desktop/2018/fall-2018/advanced_css/final/FinalProject/style.scss */
     .summary {
       grid-column: 1/8;
       grid-row: 4/6; } }
 
+/* line 92, /Users/a_veites/Desktop/2018/fall-2018/advanced_css/final/FinalProject/style.scss */
 .summary > p {
   text-align: center; }
   @media (min-width: 50em) {
+    /* line 92, /Users/a_veites/Desktop/2018/fall-2018/advanced_css/final/FinalProject/style.scss */
     .summary > p {
       width: 50%;
       font-weight: light;
       text-align: left; } }
 
+/* line 101, /Users/a_veites/Desktop/2018/fall-2018/advanced_css/final/FinalProject/style.scss */
 .preamble {
   line-height: 1.8rem; }
   @media (min-width: 50em) {
+    /* line 101, /Users/a_veites/Desktop/2018/fall-2018/advanced_css/final/FinalProject/style.scss */
     .preamble {
       grid-column: 1/8;
       grid-row: 6/8;
       position: relative; } }
+  /* line 108, /Users/a_veites/Desktop/2018/fall-2018/advanced_css/final/FinalProject/style.scss */
   .preamble h3 {
     text-align: center; }
 
+/* line 113, /Users/a_veites/Desktop/2018/fall-2018/advanced_css/final/FinalProject/style.scss */
 .preamble,
 .participation,
 .requirements {
   text-align: center;
   color: #f0f0df; }
 
+/* line 120, /Users/a_veites/Desktop/2018/fall-2018/advanced_css/final/FinalProject/style.scss */
 .preamble, .requirements {
   margin-bottom: 2em; }
 
+/* line 124, /Users/a_veites/Desktop/2018/fall-2018/advanced_css/final/FinalProject/style.scss */
 .main {
   line-height: 1.8rem; }
   @media (min-width: 50em) {
+    /* line 124, /Users/a_veites/Desktop/2018/fall-2018/advanced_css/final/FinalProject/style.scss */
     .main {
       display: grid;
       grid-template-rows: repeat(5, auto);
       grid-template-columns: repeat(2, auto); } }
 
+/* line 133, /Users/a_veites/Desktop/2018/fall-2018/advanced_css/final/FinalProject/style.scss */
 .explanation {
   display: grid; }
   @media (min-width: 50em) {
+    /* line 133, /Users/a_veites/Desktop/2018/fall-2018/advanced_css/final/FinalProject/style.scss */
     .explanation {
       position: relative;
       grid-row: 1/2;
       grid-column: 2/3; } }
 
+/* line 153, /Users/a_veites/Desktop/2018/fall-2018/advanced_css/final/FinalProject/style.scss */
 .participation {
   display: grid; }
   @media (min-width: 50em) {
+    /* line 153, /Users/a_veites/Desktop/2018/fall-2018/advanced_css/final/FinalProject/style.scss */
     .participation {
       position: relative;
       grid-row: 2/3;
       grid-column: 1/2; }
+      /* line 159, /Users/a_veites/Desktop/2018/fall-2018/advanced_css/final/FinalProject/style.scss */
       .participation::before {
         content: url("");
         background-repeat: no-repeat;
@@ -156,15 +187,18 @@ a {
         transition: all 3s;
         transition-timing-function: ease-out; } }
 
+/* line 177, /Users/a_veites/Desktop/2018/fall-2018/advanced_css/final/FinalProject/style.scss */
 .benefits {
   display: grid; }
   @media (min-width: 50em) {
+    /* line 177, /Users/a_veites/Desktop/2018/fall-2018/advanced_css/final/FinalProject/style.scss */
     .benefits {
       position: relative;
       grid-row: 3/4;
       grid-column: 2/3; } }
 
 @media (min-width: 50em) {
+  /* line 188, /Users/a_veites/Desktop/2018/fall-2018/advanced_css/final/FinalProject/style.scss */
   .explanation::before, .benefits::before {
     content: url("");
     background-repeat: no-repeat;
@@ -180,31 +214,38 @@ a {
     transition: all 3s;
     transition-timing-function: ease-out; } }
 
+/* line 206, /Users/a_veites/Desktop/2018/fall-2018/advanced_css/final/FinalProject/style.scss */
 .requirements {
   line-height: 1.8rem;
   margin-top: 2em; }
   @media (min-width: 50em) {
+    /* line 206, /Users/a_veites/Desktop/2018/fall-2018/advanced_css/final/FinalProject/style.scss */
     .requirements {
       grid-row: 4/5;
       grid-column: 1/3; } }
 
 @media (min-width: 50em) {
+  /* line 215, /Users/a_veites/Desktop/2018/fall-2018/advanced_css/final/FinalProject/style.scss */
   footer {
     grid-column: 1/3;
     grid-row: 5/6;
     text-align: center; }
+    /* line 220, /Users/a_veites/Desktop/2018/fall-2018/advanced_css/final/FinalProject/style.scss */
     footer::before {
       content: '\A';
       white-space: pre; } }
 
+/* line 227, /Users/a_veites/Desktop/2018/fall-2018/advanced_css/final/FinalProject/style.scss */
 .wrapper {
   display: grid;
   grid-template-columns: 50% 50%;
   grid-template-rows: auto auto; }
   @media (min-width: 50em) {
+    /* line 227, /Users/a_veites/Desktop/2018/fall-2018/advanced_css/final/FinalProject/style.scss */
     .wrapper {
       grid-template-columns: 25% 25% 25% 25%;
       position: relative; }
+      /* line 234, /Users/a_veites/Desktop/2018/fall-2018/advanced_css/final/FinalProject/style.scss */
       .wrapper::after {
         content: url("");
         background-repeat: no-repeat;
@@ -217,15 +258,18 @@ a {
         width: 45%;
         border: 1px solid; } }
 
+/* line 249, /Users/a_veites/Desktop/2018/fall-2018/advanced_css/final/FinalProject/style.scss */
 .design-selection {
   grid-row: 1/2;
   grid-column: 1/3;
   width: 100%; }
   @media (min-width: 50em) {
+    /* line 249, /Users/a_veites/Desktop/2018/fall-2018/advanced_css/final/FinalProject/style.scss */
     .design-selection {
       grid-column: 1/3;
       grid-row: 1/2; } }
 
+/* line 260, /Users/a_veites/Desktop/2018/fall-2018/advanced_css/final/FinalProject/style.scss */
 .design-archives,
 .zen-resources {
   grid-row: 2/3; }
