--- a/_partials.scss
+++ b/_partials.scss
@@ -19,9 +19,11 @@
 }
 
 @keyframes spin {
+    0% {
+        opacity: 0;
+    }
     100% {
-        -webkit-transform: rotate(360deg);
-        transform: rotate(360deg);
+        opacity: 1;
     }
 }
 
