--- a/style.css
+++ b/style.css
@@ -6,9 +6,10 @@
   100% {
     -webkit-transform: rotate(360deg); } }
 @keyframes spin {
+  0% {
+    opacity: 0; }
   100% {
-    -webkit-transform: rotate(360deg);
-    transform: rotate(360deg); } }
+    opacity: 1; } }
 @keyframes slide-in-right {
   0% {
     left: -2000px; }
@@ -75,9 +76,9 @@ a {
       background-size: 100px 100px;
       grid-column: 6/7;
       grid-row: 3/5;
-      -webkit-animation: spin 10s linear infinite;
-      -moz-animation: spin 10s linear infinite;
-      animation: spin 10s linear infinite;
+      -webkit-animation: spin 4s ease-out;
+      -moz-animation: spin 4s ease-out;
+      animation: spin 4s ease-out;
       transform-origin: center; } }
 
 .summary {
