--- a/style.scss
+++ b/style.scss
@@ -68,9 +68,9 @@ a {
             background-size: 100px 100px;
             grid-column: 6/7;
             grid-row: 3/5;
-            -webkit-animation: spin 10s linear infinite;
-            -moz-animation: spin 10s linear infinite;
-            animation: spin 10s linear infinite;
+            -webkit-animation: spin 4s ease-out;
+            -moz-animation: spin 4s ease-out;
+            animation: spin 4s ease-out;
             transform-origin: center;
             
         }
