--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Open+Sans:300i,400,600|Pacifico");
+@import url("https://fonts.googleapis.com/css?family=Share+Tech+Mono");
 @-moz-keyframes spin {
   100% {
     -moz-transform: rotate(360deg); } }
