--- a/style.scss
+++ b/style.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:300i,400,600|Pacifico');
+@import url('https://fonts.googleapis.com/css?family=Share+Tech+Mono');
 @import '_partials';
 $break-large: 50em;
 $primary: rgb(63, 88, 102);
