--- a/_partials.scss
+++ b/_partials.scss
@@ -19,12 +19,8 @@
 }
 
 @keyframes spin {
-    0% {
-        opacity: 0;
-    }
-    100% {
-        opacity: 1;
-    }
+    0% { opacity: 0; }
+    100% { opacity: 1;}
 }
 
 @keyframes slide-in-right {
