--- a/style.scss
+++ b/style.scss
@@ -155,6 +155,7 @@ a {
                 animation: slide-in-right 3s;
                 transition: all 3s;
                 transition-timing-function: ease-out;
+            }
     }
 }
 
@@ -202,6 +203,7 @@ a {
                 animation: slide-in-right 3s;
                 transition: all 3s;
                 transition-timing-function: ease-out;
+            }
     }
 }
 
