--- a/style.css
+++ b/style.css
@@ -1,47 +1,240 @@
-/*
-Error: Invalid CSS after "}": expected "}", was ""
-        on line 266 of style.scss
+@import url("https://fonts.googleapis.com/css?family=Share+Tech+Mono");
+@-moz-keyframes spin {
+  100% {
+    -moz-transform: rotate(360deg); } }
+@-webkit-keyframes spin {
+  100% {
+    -webkit-transform: rotate(360deg); } }
+@keyframes spin {
+  0% {
+    opacity: 0; }
+  100% {
+    opacity: 1; } }
+@keyframes slide-in-right {
+  0% {
+    left: -2000px; }
+  100% {
+    left: -500px; } }
+@keyframes slide-in-left {
+  0% {
+    right: -2000px; }
+  100% {
+    right: -500px; } }
+body {
+  margin: 0 auto;
+  padding: 20px;
+  background-image: linear-gradient(to bottom, #16395C, #071827, #05111C);
+  font-family: "Open Sans", sans-serif;
+  color: #f0f0df;
+  overflow-x: hidden; }
+  @media (min-width: 50em) {
+    body {
+      font-size: 1rem; } }
 
-261: 
-262: .design-archives,
-263: .zen-resources {
-264:     grid-row: 2/3;
-265: }
+abbr {
+  border-bottom: none; }
 
-Backtrace:
-style.scss:266
-C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.5.7/lib/sass/scss/parser.rb:1278:in `expected'
-C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.5.7/lib/sass/scss/parser.rb:1208:in `expected'
-C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.5.7/lib/sass/scss/parser.rb:1203:in `tok!'
-C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.5.7/lib/sass/scss/parser.rb:679:in `block'
-C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.5.7/lib/sass/scss/parser.rb:747:in `declaration_or_ruleset'
-C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.5.7/lib/sass/scss/parser.rb:697:in `block_child'
-C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.5.7/lib/sass/scss/parser.rb:689:in `block_contents'
-C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.5.7/lib/sass/scss/parser.rb:678:in `block'
-C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.5.7/lib/sass/scss/parser.rb:670:in `ruleset'
-C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.5.7/lib/sass/scss/parser.rb:696:in `block_child'
-C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.5.7/lib/sass/scss/parser.rb:689:in `block_contents'
-C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.5.7/lib/sass/scss/parser.rb:137:in `stylesheet'
-C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.5.7/lib/sass/scss/parser.rb:41:in `parse'
-C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.5.7/lib/sass/engine.rb:414:in `_to_tree'
-C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.5.7/lib/sass/engine.rb:389:in `_render_with_sourcemap'
-C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.5.7/lib/sass/engine.rb:307:in `render_with_sourcemap'
-C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.5.7/lib/sass/plugin/compiler.rb:462:in `update_stylesheet'
-C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.5.7/lib/sass/plugin/compiler.rb:215:in `block in update_stylesheets'
-C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.5.7/lib/sass/plugin/compiler.rb:209:in `each'
-C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.5.7/lib/sass/plugin/compiler.rb:209:in `update_stylesheets'
-C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.5.7/lib/sass/plugin/compiler.rb:443:in `on_file_changed'
-C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.5.7/lib/sass/plugin/compiler.rb:320:in `block in watch'
-C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-listen-4.0.0/lib/sass-listen/event/config.rb:23:in `call'
-C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-listen-4.0.0/lib/sass-listen/event/processor.rb:115:in `_process_changes'
-C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-listen-4.0.0/lib/sass-listen/event/processor.rb:19:in `block in loop_for'
-C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-listen-4.0.0/lib/sass-listen/event/processor.rb:15:in `loop'
-C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-listen-4.0.0/lib/sass-listen/event/processor.rb:15:in `loop_for'
-C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-listen-4.0.0/lib/sass-listen/event/loop.rb:84:in `_wait_for_changes'
-C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-listen-4.0.0/lib/sass-listen/event/loop.rb:42:in `block in setup'
-C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-listen-4.0.0/lib/sass-listen/internals/thread_pool.rb:6:in `block in add'
-*/
-body:before {
-  white-space: pre;
-  font-family: monospace;
-  content: "Error: Invalid CSS after \"}\": expected \"}\", was \"\"\A         on line 266 of style.scss\A \A 261: \A 262: .design-archives,\A 263: .zen-resources {\A 264:     grid-row: 2/3;\A 265: }"; }
+h1,
+h2,
+h3 {
+  font-family: "Pacifico", cursive;
+  font-weight: 300; }
+
+header {
+  text-align: center;
+  color: #f0f0df;
+  font-weight: bold; }
+  @media (min-width: 50em) {
+    header {
+      grid-column: 1/4;
+      grid-row: 1/4;
+      text-align: left;
+      font-size: 1.6rem;
+      line-height: 1.2rem; } }
+
+a {
+  color: #ffb021;
+  text-decoration: none; }
+  a:hover {
+    font-size: 1.5em;
+    font-weight: bolder;
+    transition: 1s; }
+
+@media (min-width: 50em) {
+  .intro {
+    display: grid;
+    grid-template-rows: repeat(7, auto);
+    grid-template-columns: repeat(7, auto);
+    animation: slide-in-right 1s;
+    transition: all 1s;
+    transition-timing-function: ease-out; }
+    .intro::after {
+      display: inline-block;
+      content: url("assets/sun-planets72-01.png");
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+      grid-column: 6/7;
+      grid-row: 3/5;
+      -webkit-animation: spin 4s ease-out;
+      -moz-animation: spin 4s ease-out;
+      animation: spin 4s ease-out; } }
+
+.summary {
+  font-style: italic; }
+  @media (min-width: 50em) {
+    .summary {
+      grid-column: 1/8;
+      grid-row: 4/6; } }
+
+.summary > p {
+  text-align: center; }
+  @media (min-width: 50em) {
+    .summary > p {
+      width: 50%;
+      font-weight: light;
+      text-align: left; } }
+
+.preamble {
+  line-height: 1.8rem; }
+  @media (min-width: 50em) {
+    .preamble {
+      grid-column: 1/8;
+      grid-row: 6/8;
+      position: relative; } }
+  .preamble h3 {
+    text-align: center; }
+
+.preamble,
+.participation,
+.requirements {
+  text-align: center;
+  color: #f0f0df; }
+
+.preamble, .requirements {
+  margin-bottom: 2em; }
+
+.main {
+  line-height: 1.8rem; }
+  @media (min-width: 50em) {
+    .main {
+      display: grid;
+      grid-template-rows: repeat(5, auto);
+      grid-template-columns: repeat(2, auto); } }
+
+.explanation {
+  display: grid; }
+  @media (min-width: 50em) {
+    .explanation {
+      position: relative;
+      grid-row: 1/2;
+      grid-column: 2/3; }
+      .explanation::before {
+        content: url("");
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        display: inline-block;
+        position: absolute;
+        top: 30px;
+        left: -500px;
+        height: 75%;
+        width: 45%;
+        border: 1px solid;
+        animation: slide-in-right 3s;
+        transition: all 3s;
+        transition-timing-function: ease-out; } }
+
+.participation {
+  display: grid; }
+  @media (min-width: 50em) {
+    .participation {
+      position: relative;
+      grid-row: 2/3;
+      grid-column: 1/2; }
+      .participation::before {
+        content: url("");
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        display: inline-block;
+        position: absolute;
+        top: 50px;
+        right: -500px;
+        height: 75%;
+        width: 45%;
+        border: 1px solid;
+        animation: slide-in-left 3s;
+        transition: all 3s;
+        transition-timing-function: ease-out; } }
+
+.benefits {
+  display: grid; }
+  @media (min-width: 50em) {
+    .benefits {
+      position: relative;
+      grid-row: 3/4;
+      grid-column: 2/3; }
+      .benefits::before {
+        content: url("");
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        display: inline-block;
+        position: absolute;
+        top: 30px;
+        left: -500px;
+        height: 75%;
+        width: 45%;
+        border: 1px solid;
+        animation: slide-in-right 3s;
+        transition: all 3s;
+        transition-timing-function: ease-out; } }
+
+.requirements {
+  line-height: 1.8rem;
+  margin-top: 2em; }
+  @media (min-width: 50em) {
+    .requirements {
+      grid-row: 4/5;
+      grid-column: 1/3; } }
+
+@media (min-width: 50em) {
+  footer {
+    grid-column: 1/3;
+    grid-row: 5/6;
+    text-align: center; }
+    footer::before {
+      content: '\A';
+      white-space: pre; } }
+
+.wrapper {
+  display: grid;
+  grid-template-columns: 50% 50%;
+  grid-template-rows: auto auto; }
+  @media (min-width: 50em) {
+    .wrapper {
+      grid-template-columns: 25% 25% 25% 25%;
+      position: relative; }
+      .wrapper::after {
+        content: url("");
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        display: inline-block;
+        position: absolute;
+        top: 100px;
+        right: 0;
+        height: 75%;
+        width: 45%;
+        border: 1px solid; } }
+
+.design-selection {
+  grid-row: 1/2;
+  grid-column: 1/3;
+  width: 100%; }
+  @media (min-width: 50em) {
+    .design-selection {
+      grid-column: 1/3;
+      grid-row: 1/2; } }
+
+.design-archives,
+.zen-resources {
+  grid-row: 2/3; }
+
+/*# sourceMappingURL=style.css.map */
