--- a/style.css
+++ b/style.css
@@ -129,16 +129,12 @@ a {
       grid-row: 1/2;
       grid-column: 2/3; }
       .explanation::before {
-        content: url("");
+        content: url("assets/sun-planets72-03.png");
         background-repeat: no-repeat;
         background-attachment: fixed;
         display: inline-block;
         position: absolute;
-        top: 30px;
         left: -500px;
-        height: 75%;
-        width: 45%;
-        border: 1px solid;
         animation: slide-in-right 3s;
         transition: all 3s;
         transition-timing-function: ease-out; } }
