--- a/style.css
+++ b/style.css
@@ -37,8 +37,8 @@ abbr {
 h1,
 h2,
 h3 {
-  font-family: 'Share Tech Mono', monospace;
-}
+  font-family: "Pacifico", cursive;
+  font-weight: 300; }
 
 header {
   text-align: center;
@@ -147,16 +147,12 @@ a {
       grid-row: 2/3;
       grid-column: 1/2; }
       .participation::before {
-        content: url("");
+        content: url("assets/sun-planets72-02.png");
         background-repeat: no-repeat;
         background-attachment: fixed;
         display: inline-block;
         position: absolute;
-        top: 50px;
         right: -500px;
-        height: 75%;
-        width: 45%;
-        border: 1px solid;
         animation: slide-in-left 3s;
         transition: all 3s;
         transition-timing-function: ease-out; } }
@@ -169,16 +165,13 @@ a {
       grid-row: 3/4;
       grid-column: 2/3; }
       .benefits::before {
-        content: url("");
+        content: url("assets/sun-planets72-04.png");
         background-repeat: no-repeat;
         background-attachment: fixed;
         display: inline-block;
         position: absolute;
         top: 30px;
         left: -500px;
-        height: 75%;
-        width: 45%;
-        border: 1px solid;
         animation: slide-in-right 3s;
         transition: all 3s;
         transition-timing-function: ease-out; } }
