--- a/style.css
+++ b/style.css
@@ -37,8 +37,7 @@ abbr {
 h1,
 h2,
 h3 {
-  font-family: "Pacifico", cursive;
-  font-weight: 300; }
+  font-family: 'Share Tech Mono', monospace;}
 
 header {
   text-align: center;
