--- a/style.scss
+++ b/style.scss
@@ -57,9 +57,6 @@ a {
         display: grid;
         grid-template-rows: repeat(7, auto);
         grid-template-columns: repeat(7, auto);
-        animation: slide-in-right 1s;
-        transition: all 1s;
-        transition-timing-function: ease-out;
         &::after {
             display: inline-block;
             content: url('assets/sun-planets72-01.png');
@@ -77,6 +74,7 @@ a {
 
 .summary {
     font-style: italic;
+    z-index: 100;
     @include breakpoint(large) {
         grid-column: 1/8;
         grid-row: 4/6;
@@ -94,6 +92,7 @@ a {
 
 .preamble {
     line-height: 1.8rem;
+    z-index: 100;
     @include breakpoint(large) {
         grid-column: 1/8;
         grid-row: 6/8;
@@ -109,6 +108,7 @@ a {
 .requirements {
     text-align: center;
     color: $tertiary;
+    z-index: 100;
 }
 
 .preamble, .requirements {
@@ -117,6 +117,7 @@ a {
 
 .main {
     line-height: 1.8rem;
+    z-index: 100;
     @include breakpoint(large) {
         display: grid;
         grid-template-rows: repeat(5, auto);
