--- a/style.scss
+++ b/style.scss
@@ -149,7 +149,7 @@ a {
                 display: inline-block;
                 position: absolute;
                 z-index: 0;
-                top: -200px;
+                top: -300px;
                 left: -600px;
                 animation: slide-in-right 3s;
                 transition: all 3s;
@@ -160,12 +160,13 @@ a {
 
 .participation {
     display: grid;
+    z-index: 100;
     @include breakpoint(large) {
         position: relative;
         grid-row: 2/3;
         grid-column: 1/2;
         &::before {
-            content: url('assets/sun-planets72-02.png');
+            content: url('assets/sun-planets72-04.png');
             background-repeat: no-repeat;
             background-attachment: fixed;
             display: inline-block;
@@ -186,7 +187,7 @@ a {
         grid-row: 3/4;
         grid-column: 2/3;
             &::before {
-                content: url('assets/sun-planets72-04.png');
+                content: url('assets/sun-planets72-02.png');
                 background-repeat: no-repeat;
                 background-attachment: fixed;
                 display: inline-block;
