--- a/style.css
+++ b/style.css
@@ -207,16 +207,13 @@ a {
       grid-template-columns: 25% 25% 25% 25%;
       position: relative; }
       .wrapper::after {
-        content: url("");
+        content: url("assets/astroguy.png");
         background-repeat: no-repeat;
         background-attachment: fixed;
         display: inline-block;
         position: absolute;
         top: 100px;
-        right: 0;
-        height: 75%;
-        width: 45%;
-        border: 1px solid; } }
+        right: 0; } }
 
 .design-selection {
   grid-row: 1/2;
