--- a/style.css
+++ b/style.css
@@ -1,16 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Share+Tech+Mono");
-@keyframes zoom-in {
-  0% {
-    transform: scale(0.3); }
-  100% {
-    transform: scale(1); } }
-@-moz-keyframes spin {
-  100% {
-    -moz-transform: rotate(360deg); } }
-@-webkit-keyframes spin {
-  100% {
-    -webkit-transform: rotate(360deg); } }
-@keyframes spin {
+@keyframes fade-in {
   0% {
     opacity: 0; }
   100% {
@@ -25,6 +14,11 @@
     right: -2000px; }
   100% {
     right: -600px; } }
+@keyframes slide-in-up {
+  0% {
+    background-position-y: 1000px; }
+  100% {
+    background-position-y: 100px; } }
 body {
   margin: 0 auto;
   padding: 20px;
@@ -42,7 +36,8 @@ abbr {
 h1,
 h2,
 h3 {
-  font-family: 'Share Tech Mono', monospace;}
+  font-family: "Pacifico", cursive;
+  font-weight: 300; }
 
 header {
   text-align: center;
@@ -66,38 +61,23 @@ a {
 
 @media (min-width: 50em) {
   .intro {
-    display: grid;
-    grid-template-rows: repeat(7, auto);
-    grid-template-columns: repeat(7, auto); }
+    background-image: url("assets/sun-planets72-01.png");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position-y: 100px;
+    background-position-x: center;
+    background-size: 600px;
+    animation: slide-in-up 2s;
+    transition: background-image 2s; }
     .intro header, .intro .summary {
-      transform: scale(1);
-      animation: zoom-in 1s ease-out; }
-    .intro::after {
-      display: inline-block;
-      content: url("assets/sun-planets72-01.png");
-      background-repeat: no-repeat;
-      background-attachment: fixed;
-      grid-column: 6/7;
-      grid-row: 3/5;
-      -webkit-animation: spin 1s ease-out;
-      -moz-animation: spin 1s ease-out;
-      animation: spin 1s ease-out; } }
+      opacity: 1;
+      animation: fade-in 4s ease-out;
+      text-align: center;
+      transform: scale(1.1); } }
 
-.summary {
-  font-style: italic;
-  z-index: 100; }
-  @media (min-width: 50em) {
-    .summary {
-      grid-column: 1/8;
-      grid-row: 4/6; } }
-
-.summary > p {
-  text-align: center; }
-  @media (min-width: 50em) {
-    .summary > p {
-      width: 50%;
-      font-weight: light;
-      text-align: left; } }
+.summary::after {
+  content: '\A';
+  white-space: pre; }
 
 .preamble {
   line-height: 1.8rem;
