--- a/style.scss
+++ b/style.scss
@@ -54,44 +54,26 @@ a {
 
 .intro {
     @include breakpoint(large) {
-        display: grid;
-        grid-template-rows: repeat(7, auto);
-        grid-template-columns: repeat(7, auto);
-        & header, & .summary {
-            transform: scale(1);
-            animation: zoom-in 1s ease-out;
-        }
-        &::after {
-            display: inline-block;
-            content: url('assets/sun-planets72-01.png');
+            background-image: url('assets/sun-planets72-01.png');
             background-repeat: no-repeat;
             background-attachment: fixed;
-            grid-column: 6/7;
-            grid-row: 3/5;
-            -webkit-animation: spin 1s ease-out;
-            -moz-animation: spin 1s ease-out;
-            animation: spin 1s ease-out;
-            
+            background-position-y: 100px;
+            background-position-x: center;
+            background-size: 600px;
+            animation: slide-in-up 2s;
+            transition: background-image 2s;
+        & header, & .summary {
+            opacity: 1;
+            animation: fade-in 4s ease-out;
+            text-align: center;
+            transform: scale(1.1);
         }
     }
 }
 
-.summary {
-    font-style: italic;
-    z-index: 100;
-    @include breakpoint(large) {
-        grid-column: 1/8;
-        grid-row: 4/6;
-    }
-}
-
-.summary > p {
-    text-align: center;
-    @include breakpoint(large) {
-        width: 50%;
-        font-weight: light;
-        text-align: left;
-    }
+.summary::after {
+    content: '\A';
+    white-space: pre;
 }
 
 .preamble {
