--- a/style.css
+++ b/style.css
@@ -19,6 +19,11 @@
     background-position-y: 1000px; }
   100% {
     background-position-y: 100px; } }
+@keyframes spin {
+  0% {
+    transform: rotate(360deg); }
+  100% {
+    transform: rotate(360deg); } }
 body {
   margin: 0 auto;
   padding: 20px;
