--- a/style.scss
+++ b/style.scss
@@ -60,7 +60,7 @@ a {
             background-position-y: 100px;
             background-position-x: center;
             background-size: 600px;
-            animation: slide-in-up 2s;
+            animation: slide-in-up 2s ease-out;
             transition: background-image 2s;
         & header, & .summary {
             opacity: 1;
