--- a/style.scss
+++ b/style.scss
@@ -2,7 +2,7 @@
 @import '_partials';
 $break-large: 50em;
 $primary: rgb(63, 88, 102);
-$background: linear-gradient(to bottom, #16395C, #071827, #05111C);
+$background: linear-gradient(to bottom, #16395C, #071827, #05111C, #000000);
 $secondary: rgb(255, 176, 33);
 $tertiary: rgb(240, 240,223);
 
