--- a/style.scss
+++ b/style.scss
@@ -54,15 +54,15 @@ a {
 
 .intro {
     background-image: url('assets/sun-planets72-01.png');
-            background-repeat: no-repeat;
-            background-attachment: fixed;
-            background-position-x: center;
-            animation: slide-in-up 3s ease-out;
-            background-position-y: 100px;
-            transition: background-image 3s;
-            background-size: 400px;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position-x: center;
+    animation: slide-in-up 3s ease-out;
+    background-position-y: 100px;
+    transition: background-image 3s;
+    background-size: 400px;
     @include breakpoint(large) {
-            background-size: 600px;
+        background-size: 600px;
         & header, & .summary {
             opacity: 1;
             animation: fade-in 4s ease-out;
@@ -118,14 +118,18 @@ a {
 
 .explanation {
     display: grid;
+    background-image: url('assets/astroguy.png');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position-y: center;
+    background-size: 400px;
     @include breakpoint(large) {
         position: relative;
         grid-row: 1/2;
         grid-column: 2/3;
             &::before {
                 content: url('assets/astroguy.png');
-                background-repeat: no-repeat;
-                background-attachment: fixed;
+                
                 display: inline-block;
                 position: absolute;
                 z-index: 0;
@@ -140,6 +144,12 @@ a {
 .participation {
     display: grid;
     z-index: 100;
+    background-image: url('assets/sun-planets72-03.png');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position-y: center;
+    background-position-x: center; 
+    background-size: 400px;
     @include breakpoint(large) {
         position: relative;
         grid-row: 2/3;
@@ -147,8 +157,6 @@ a {
         &::before {
             content: url('assets/sun-planets72-03.png');
             z-index: 0;
-            background-repeat: no-repeat;
-            background-attachment: fixed;
             display: inline-block;
             position: absolute;
             right: -600px;
@@ -162,6 +170,12 @@ a {
 .benefits {
     display: grid;
     z-index: 100;
+    background-image: url('assets/sun-planets72-02.png');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position-y: center;
+    background-position-x: center; 
+    background-size: 400px;
     @include breakpoint(large) {
         position: relative;
         grid-row: 3/4;
@@ -206,13 +220,17 @@ footer {
     display: grid;
     grid-template-columns: 50% 50%;
     grid-template-rows: auto auto;
+    background-image: url('assets/astronautplanet.png');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position-x: center;
+    background-position-y: bottom;
+    background-size: 400px;
     @include breakpoint(large) {
         grid-template-columns: 25% 25% 25% 25%;
         position: relative;
         &::after {
             content: url('assets/astronautplanet.png');
-            background-repeat: no-repeat;
-            background-attachment: fixed;
             display: inline-block;
             position: absolute;
             top: -100px;
