--- a/style.scss
+++ b/style.scss
@@ -5,12 +5,13 @@ $primary: rgb(63, 88, 102);
 $background: linear-gradient(to bottom, #16395C, #071827, #05111C, #000000, #000000, #000000);
 $secondary: rgb(255, 176, 33);
 $tertiary: rgb(240, 240,223);
+$font-family: 'Share Tech Mono';
 
 body {
     margin: 0 auto;
     padding: 20px;
     background-image: $background;
-    font-family: "Open Sans", sans-serif;
+    font-family: $font-family;
     @include breakpoint(large) {
         font-size: 1rem;
     }
@@ -25,7 +26,7 @@ abbr {
 h1,
 h2,
 h3 {
-    font-family: "Pacifico", cursive;
+    font-family: $font-family;
     font-weight: 300;
 }
 
