Pretty much done!

--- a/_partials.scss
+++ b/_partials.scss
@@ -6,6 +6,14 @@
     }
 }
 
+@mixin breakpoint($break) {
+    @if $break==large {
+        @media (min-width: $break-large) {
+            @content;
+        }
+    }
+}
+
 @keyframes fade-in {
     0%{ opacity: 0; }
     100%{ opacity: 1; }
