--- a/style.css
+++ b/style.css
@@ -124,7 +124,8 @@ a {
     .explanation {
       position: relative;
       grid-row: 1/2;
-      grid-column: 2/3; }
+      grid-column: 2/3;
+      background-image: none; }
       .explanation::before {
         content: url("assets/astroguy.png");
         display: inline-block;
@@ -148,9 +149,11 @@ a {
     .participation {
       position: relative;
       grid-row: 2/3;
-      grid-column: 1/2; }
+      grid-column: 1/2;
+      background-image: none; }
       .participation::before {
         content: url("assets/sun-planets72-03.png");
+        background-attachment: inherit;
         z-index: 0;
         display: inline-block;
         position: absolute;
@@ -191,7 +194,8 @@ a {
   @media (min-width: 50em) {
     .requirements {
       grid-row: 4/5;
-      grid-column: 1/3; } }
+      grid-column: 1/3;
+      background-image: none; } }
 
 @media (min-width: 50em) {
   footer {
@@ -215,7 +219,8 @@ a {
   @media (min-width: 50em) {
     .wrapper {
       grid-template-columns: 25% 25% 25% 25%;
-      position: relative; }
+      position: relative;
+      background-image: none; }
       .wrapper::after {
         content: url("assets/astronautplanet.png");
         display: inline-block;
