--- a/style.scss
+++ b/style.scss
@@ -128,9 +128,9 @@ a {
         position: relative;
         grid-row: 1/2;
         grid-column: 2/3;
+        background-image: none;
             &::before {
                 content: url('assets/astroguy.png');
-                
                 display: inline-block;
                 position: absolute;
                 z-index: 0;
@@ -155,8 +155,10 @@ a {
         position: relative;
         grid-row: 2/3;
         grid-column: 1/2;
+        background-image: none;
         &::before {
             content: url('assets/sun-planets72-03.png');
+            background-attachment: inherit;
             z-index: 0;
             display: inline-block;
             position: absolute;
@@ -202,6 +204,7 @@ a {
     @include breakpoint(large) {
         grid-row: 4/5;
         grid-column: 1/3;
+        background-image: none;
     }
 }
 
@@ -230,6 +233,7 @@ footer {
     @include breakpoint(large) {
         grid-template-columns: 25% 25% 25% 25%;
         position: relative;
+        background-image: none;
         &::after {
             content: url('assets/astronautplanet.png');
             display: inline-block;
