--- a/style.scss
+++ b/style.scss
@@ -4,7 +4,7 @@ $break-large: 50em;
 $primary: rgb(255, 176, 33);
 $secondary: rgb(63, 88, 102);
 $tertiary: rgb(240, 240,223);
-$background: linear-gradient(to bottom, #16395C, #071827, #05111C, #000000, #000000, #000000);
+$background: linear-gradient(to bottom, rgb(68, 107, 146), #16395C, #071827, #05111C, #000000, #000000, #000000);
 $font-family: 'Share Tech Mono';
 
 body {
