--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@
 body {
   margin: 0 auto;
   padding: 20px;
-  background-image: linear-gradient(to bottom, #16395C, #071827, #05111C, #000000, #000000, #000000);
+  background-image: linear-gradient(to bottom, #446b92, #16395C, #071827, #05111C, #000000, #000000, #000000);
   font-family: "Share Tech Mono";
   color: #f0f0df;
   overflow-x: hidden; }
