--- a/style.scss
+++ b/style.scss
@@ -175,9 +175,12 @@ a {
             display: inline-block;
             position: absolute;
             right: -600px;
+            -webkit-animation: slide-in-left 3s;
+            -moz-animation: slide-in-left 3s;
             animation: slide-in-left 3s;
-            transition: all 3s;
-            transition-timing-function: ease-out;
+            -webkit-animation: all 3s ease-out;
+            -moz-animation: all 3s ease-out;
+            transition: all 3s ease-out;
         }
     }
 }
@@ -197,9 +200,12 @@ a {
                 position: absolute;
                 top: 30px;
                 left: -678px;
+                -webkit-animation: slide-in-right 3s;
+                -moz-animation: slide-in-right 3s;
                 animation: slide-in-right 3s;
-                transition: all 3s;
-                transition-timing-function: ease-out;
+                -webkit-animation: all 3s ease-out;
+                -moz-animation: all 3s ease-out;
+                transition: all 3s ease-out;
             }
     }
 }
@@ -253,6 +259,8 @@ footer {
             top: -100px;
             right: 0;
             overflow: hidden;
+            -webkit-transform: scale(.65);
+            -moz-transform: scale(.65);
             transform: scale(.65);
         }
     }
